<resources>
    <string name="app_name">PlanificadorViaje</string>
    <string name="aplicacion_name">WizGo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Inicio</string>
    <string name="title_itinerary">Intinerario</string>
    <string name="title_account">Cuenta</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="save_changes">Guardar Cambios</string>
    <string name="email">Correo Electronico</string>
    <string name="name">Nombres</string>
    <string name="add_plan">Agregar plan</string>
    <string name="plan_type">Tipo de plan</string>
    <string name="plan_date">Fecha del plan</string>
    <string name="plan_details">Detalles del plan</string>
    <string name="save_plan">Guardar plan</string>
    <string name="search">Buscar</string>
    <string name="filter">Filtros</string>
    <string name="edit">Editar</string>
    <string name="share">Compartir</string>
    <string name="delete">Eliminar</string>
    <string name="itinerary_details">Detalles itinerario</string>
    <string name="account">Cuenta</string>
    <string name="add_collaborator">Agregar colaborador</string>
    <string name="export">Exportar</string>
    <string name="sort">Ordenar</string>
    <string name="settings">Configuración</string>
    <string name="upcoming_trip">Viaje proximo</string>
    <string name="your_itineraries">Tus itinerarios</string>
    <string name="itinerary">Itinerario</string>
    <string name="home">Inicio</string>
    <string name="plan">Plan</string>
    <string name="itinerary_dates">%1$s - %2$s</string>
    <string name="create_itinerary">Crear Itinerario</string>
    <string name="itinerary_name">Nombre de Itinerario</string>
    <string name="destination">Destino</string>
    <string name="date_range">Rango de fechas</string>
    <string name="description">Descripcion</string>
    <string name="select_plan_type">Tipo de plan</string>
    <string name="create_plan">Crear Plan</string>
    <string name="plan_type_flight">Vuelo</string>
    <string name="plan_type_accommodation">Hotel</string>
    <string name="plan_type_car_rental">Alquilar Vehiculo</string>
    <string name="plan_type_meeting">Reunion</string>
    <string name="plan_type_activity">Actividad</string>
    <string name="plan_type_restaurant">Restaurante</string>
    <string name="plan_type_transport">Transporte</string>
    <string name="add_itinerary">Agregar itinerario</string>
    <string name="itinerary_detail">Detalle del itinerario</string>
    <string name="travelers">Viajeros</string>
    <string name="autenticando">Autenticando...</string>
    <string name="no_trips_available">No tiene ningún itinerario aún.</string>
    <string name="plan_type_package_trip">Paquete de Plan de Viaje</string>
    <string name="hospedaje_title">Alojamiento</string>
    <string name="destination_hint">Destino</string>
    <string name="check_in_date_hint">Fecha de entrada</string>
    <string name="check_out_date_hint">Fecha de salida</string>
    <string name="guests_hint">Personas</string>
    <string name="search_hospedaje">Buscar alojamientos</string>
    <string name="description_title">Descripción</string>
    <string name="transport_title">Transporte</string>
    <string name="lima_description">Lima es la capital del Perú, ubicada en la costa central del país, a orillas del Océano Pacífico. Conocida como la "Ciudad de los Reyes", esta combina la rica herencia colonial con el dinamismo de una ciudad moderna.</string>
    <string name="accommodation_title">Alojamiento</string>
    <string name="choose">Elegir</string>
    <!-- Other string resources -->
    <string name="price_per_night">S/%d por noche</string>
    <string name="price_per_person">S/%d por persona</string>
    <string name="plans">Mis planes</string>
    <string name="date">Fecha</string>
    <string name="meal_type">Tipo de comida</string>
    <string name="time">Hora</string>
    <string name="restaurant">Restaurante</string>
    <string name="add_or_change_location">Agregar o cambiar lugar</string>
    <string name="show_nearby_restaurants">Buscar restaurantes cercanos</string>
    <string name="save_restaurant_plan">Guardar plan</string>
    <string name="restaurant_form">Formulario para Restaurante</string>
    <string name="nearby_restaurants">Restaurantes cercanos</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>
    <string name="restaurant_image">Imagen del Restaurante</string>
    <string name="location_icon">Icono de la ubicación</string>
    <string name="nearby_hotels">Hoteles cercanos</string>
    <string name="check_in_date">Fecha de Check-in</string>
    <string name="check_out_date">Fecha de Check-out</string>
    <string name="hotel_location">Ubicación del Hotel</string>
    <string name="add_or_change_hotel">Agregar o Cambiar Hotel</string>
    <string name="save_hotel_plan">Guardar Hotel</string>
    <string name="hotel_image">Imagen del Hotel</string>
    <string name="error_plan_name_required">El nombre del plan es requerido</string>
    <string name="error_invalid_dates">Las fechas seleccionadas no son válidas</string>
    <string name="error_hotel_required">Debe seleccionar un hotel</string>
    <string name="plan_saved">Plan guardado exitosamente</string>
    <string name="hotel_form">Formulario Hotel</string>
    <string name="add_hotel_plan">Agregar Hotel</string>
    <string name="add_hotel">Agregar Hotel</string>
    <string name="basic_info">Información Básica</string>

    <string name="plan_name">Título</string>
    <string name="change_hotel">Cambiar Hotel</string>
    <string name="hotel_info">Información del Hotel</string>
    <string name="view_details">Ver Detalles</string>
    <string name="wifi">Wi-Fi</string>
    <string name="pool">Piscina</string>


    <string name="welcome_traveler">¡Bienvenido, Viajero!</string>
    <string name="discover_places">Descubre lugares cerca tuyo</string>
    <string name="search_hint">Busca un resutaurante o una actividad</string>
    <string name="top_destinations">Mejores destinos</string>
    <string name="local_spots">Lugares de interés</string>
    <string name="explore">Explorar</string>
    <string name="restaurant_info">Información del Restaurante</string>
    <string name="change_restaurant">Cambiar Restaurante</string>
    <string name="add_restaurant_plan">Agregar Restaurante</string>
    <string name="view_trip">Ver Detalles</string>
    <string name="create_first_trip">Crea tu primer Itinerario</string>
    <string name="delete_itinerary">Eliminar Itinerario</string>
    <string name="confirm_delete">Confirmar</string>
    <string name="confirm_delete_message">¿Esta seguro de eliminar el itinerario?</string>
    <string name="itinerary_deleted">Itinerario Eliminado</string>
    <string name="error_deleting_itinerary">Error al eliminar el Itinerario</string>
    <string name="delete_selected_plans">Eliminar Planes Seleccionados</string>
    <string name="eliminar_planes">Eliminar Planes</string>
    <string name="profile">Perfil</string>
    <string name="password">Contraseña</string>
    <string name="personal_info">Información Personal</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="lastname">Apellidos</string>
    <string name="save">Guardar</string>
    <string name="user_role">Rol</string>
    <string name="full_name">Nombre Completo</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido_viajero">¡Bienvenido Viajero!</string>
    <string name="unete_a_nosotros">¡Únete a Nosotros!</string>
    <string name="popular_plan_categories">Categorias Populares</string>
    <string name="all_plan_types">Todas las categorias</string>
    <string name="my_map">Mapa</string>
    <string name="details">Detalles</string>
    <string name="title">Título</string>
    <string name="plan_information">Información del Plan</string>
</resources>